# CSOPESY-MO1

./: .gitignore  CMakeLists.txt  PAGING_QA.md  PRESENTATION.md  README.md  build.sh  config.txt  csopesy-log.txt  instructions.txt  main.cpp  run.sh  tasks.json
class activities/: 2Avelino Processes SW  Liong.cpp  process_table.h
class activities/week 2/: Liong.cpp  SOP processes.cpp  process.h  process_map.h
class activities/week 3/: SOP symbol table.cpp
class activities/week 6/: CMakeLists.txt
class activities/week 6/src/: MainConsole.cpp  Process.cpp  Process.h
include/: Core.hpp  Helper.hpp  Process.hpp  SystemState.hpp  include.hpp
include/commands/: ClearCommand.hpp  ExitCommand.hpp  InitializeCommand.hpp  ReportUtilCommand.hpp  SchedulerCommand.hpp  ScreenCommand.hpp  VmstatCommand.hpp
include/commandshpp/: ClearCommand.hpp  ExitCommand.hpp  InitializeCommand.hpp  ReportUtilCommand.hpp  SchedulerCommand.hpp  ScreenCommand.hpp
include/gui/: AWindow.hpp  AboutUI.hpp  Desktop.hpp  GUIApplication.hpp  SettingsUI.hpp  TaskManagerUI.hpp  Taskbar.hpp  TextureLoader.hpp  TimeUtil.hpp  UIConfig.hpp  UIManager.hpp
include/misc/: BackingStore.hpp  Core.hpp  FrameManager.hpp  Helper.hpp  IMemoryAllocator.hpp  MemoryAllocator.hpp  MemoryManager.hpp  PagingAllocator.hpp  Process.hpp  SymbolTable.hpp  SystemState.hpp
include/services/: ConfigService.hpp  ReportUtilService.hpp  SchedulerService.hpp  ScreenService.hpp  VmstatService.hpp
include/serviceshpp/: ClearService.hpp  ExitService.hpp  InitializeService.hpp  SchedulerService.hpp
include/tui/: MainMenu.hpp
lib/imgui-1.92.8/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_tables.cpp
lib/imgui-1.92.8/docs/: CHANGELOG.txt
schedulers/: main  main.cpp  process.hpp
src/: main.cpp
src/commands/: ClearCommand.cpp  ExitCommand.cpp  InitializeCommand.cpp  ReportUtilCommand.cpp  SchedulerCommand.cpp  ScreenCommand.cpp  VmstatCommand.cpp
src/gui/: AboutUI.cpp  Desktop.cpp  GUIApplication.cpp  SettingsUI.cpp  TaskManagerUI.cpp  Taskbar.cpp  TextureLoader.cpp  UIConfig.cpp  UIManager.cpp  main.cpp
src/include/: include.hpp
src/include/serviceshpp/: ClearService.hpp
src/interfaces/: Command.hpp  Service.hpp
src/misc/: BackingStore.cpp  Core.cpp  FrameManager.cpp  Helper.cpp  MemoryAllocator.cpp  MemoryManager.cpp  PagingAllocator.cpp  Process.cpp  SymbolTable.cpp  SystemState.cpp
src/services/: ClearService.cpp  ConfigService.cpp  ExitService.cpp  InitializeService.cpp  ReportUtilService.cpp  SchedulerService.cpp  ScreenService.cpp  Service.cpp  VmstatService.cpp
src/tui/: MainMenu.cpp
